--- a/templates/FrontPage.html
+++ b/templates/FrontPage.html
@@ -5,8 +5,12 @@
  </head>
  <style type="text/css">
 
-hr{
+.hr1{
 margin: 20px auto;
+}
+
+.hr2{
+margin: 10px auto;
 }
 
 .post + .post {
@@ -25,11 +29,12 @@ font-size: 17px;
  </style>
  <body>
   <h1>Blogarama</h1>
-    <hr>
+    <hr class="hr1">
   {% for post in posts %}
     <div class="post">
      <div class="post-subject">{{post.subject}}</div>
      <pre class="post-content">{{post.content}}</pre>
+     <hr class="hr2">
     </div>
   {% endfor %}
  </body>
